# rec_rpc-1.0.0

./: CMakeLists.txt
examples/Client/: Client.cpp  Client.h  Client.pro  LogView.h  MainWindow.cpp  MainWindow.h
examples/Server/: LogView.cpp  Server.cpp  Server.h  Server.pro  mainwindow.cpp  mainwindow.h
examples/Server/serialization/: ImageMsg.h
rec/rpc/: Client.cpp  Client.h  Exception.cpp  Exception.h  Server.cpp  Server.h  common.cpp  common.h  common_internal.hpp  defines.h  rec_rpc_version.h  rec_rpc_version.rc  utils.h
rec/rpc/client/: Client.cpp  Client.hpp  Socket.cpp  Socket.hpp
rec/rpc/configuration/: Configuration.cpp  Configuration.hpp  Item.cpp  Item.hpp
rec/rpc/messages/: Configurations.cpp  Configurations.h  Message.h  RPCRequest.cpp  RPCRequest.h  RPCResponse.cpp  RPCResponse.h  RegisterChannel.cpp  RegisterChannel.h  Topic.cpp  Topic.h  UnregisterChannel.cpp  UnregisterChannel.h
rec/rpc/serialization/: Complex.cpp  Complex.h  LocalTopic.cpp  LocalTopic.hpp  Pose2D.cpp  Primitive.h  Serializable.cpp  Serializable.h  String.cpp  TopicInfo.h  VersionInfo.cpp  VersionInfo.hpp
rec/rpc/server/: Impl.cpp  Impl.hpp  Server.cpp  Server.hpp  ServerThread.cpp  ServerThread.hpp
